--- a/sass/modules/menu.scss
+++ b/sass/modules/menu.scss
@@ -69,7 +69,7 @@ button.nav-toggle { // flat
         visibility: visible;
     }
 
-    .nav-toggle {
+    button.nav-toggle {
         display: block;
     }
 }
