--- a/sass/modules/menu.scss
+++ b/sass/modules/menu.scss
@@ -13,7 +13,7 @@
     }
 
     li {
-        background-color: $white;
+        background-color: $whiteish;
 
         &.current_page_item > a {
             text-shadow: 1px 0 0 currentColor;
