--- a/style.css
+++ b/style.css
@@ -712,7 +712,7 @@ body {
 
 @media screen and (min-width: 800px) {
   .sidebar-container, .site-header {
-    max-width: 275px;
+    width: 275px;
   }
 
   .content-container {
@@ -982,6 +982,15 @@ main article + article:before {
   color: #191919;
 }
 
+/* Main header */
+.main-meta {
+  margin-bottom: 0;
+}
+
+.main-title {
+  margin-top: 0;
+}
+
 /* Content */
 .post-title {
   margin-top: 0;
@@ -1076,6 +1085,12 @@ input[type=text],
 input[type=url],
 textarea {
   width: 100%;
+  padding: 0.3em;
+}
+
+/* Search form */
+.main-search-form {
+  margin-bottom: 36px;
 }
 
 /* Image caption */
