--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -28,3 +28,11 @@
         color: $col-main;
     }
 }
+
+@mixin label(){
+    font-size: 0.8em;
+    font-weight: 700;
+    margin-bottom: 0.3em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
